2004-08-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Luca Ognibene <skaboy81@virgilio.it>

	* gst/gstcaps.c:
	* gst/gstelement.c:
	* gst/gstpad.c:
	* gst/gstxml.c:
	  fix memleaks.  Fixes #150001

2004-08-17  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* docs/random/ds/0.9-suggested-changes:
	  add notes - mostly about pad templates

2004-08-16  Steve Lhomme  <steve.lhomme@free.fr>

	* win32/GStreamer.vcproj:
	  temporary local files are .gmo not .mo

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: bump nano to cvs

=== release 0.8.5 ===

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.8.5, "Stuttgart"
	* NEWS:
	* RELEASE:
	* configure.ac:
	* docs/random/release:
	  updates for release

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Wim Taymans (wim@fluendo.com)

	* gst/gstbuffer.c:
	* gst/gstindex.h:
	* libs/gst/dataprotocol/dataprotocol.c:
	  copy KEY_UNIT and DELTA_UNIT flags correctly.  Fixes #150242

2004-08-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* win32/MANIFEST:
	  add win32 dir to the build.  Fixes #149981.

2004-08-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  bump libtool versioning
	* gst/gststructure.c:
	  mark function as static
	* po/af.po:
	* po/az.po:
	* po/ca.po:
	* po/cs.po:
	* po/en_GB.po:
	* po/fr.po:
	* po/nl.po:
	* po/sq.po:
	* po/sr.po:
	* po/sv.po:
	* po/tr.po:
	* po/uk.po:
	  translations update
	* win32/README.txt:
	  trademark protection

2004-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  fix GST_ORIGIN
	  set GST_PACKAGE to source, and distinguish between release and other
	* tools/gst-inspect.c:
	  print out plugin an element factory is part of so we see this info

2004-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/gstreamer-sections.txt: